@@ -9,7 +9,7 @@ Build-Depends:
  libcmocka-dev (>= 1.0.0),
  libedit-dev,
  libgnutls28-dev,
- libknot-dev (>= 2.7.6),
+ libknot-dev (>= 2.8),
  liblmdb-dev,
  libluajit-5.1-dev,
  libsystemd-dev (>= 227) [linux-any],
